<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".beacon.BeaconSettingActivity">

    <TextView
        android:id="@+id/beaconSettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/ic_settings_gray"
        android:drawablePadding="8dp"
        android:fontFamily="@font/jura_light"
        android:text="@string/setting_title"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/beaconSettingTxtScan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_play"
        android:drawablePadding="4dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical"
        android:text="@string/setting_scan"
        android:textColor="@color/colorGrey"
        app:layout_constraintBaseline_toBaselineOf="@+id/beaconSettingEditScan"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/beaconSettingTxtBtw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_pause"
        android:drawablePadding="4dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical"
        android:text="@string/setting_btw_scan"
        android:textColor="@color/colorGrey"
        app:layout_constraintBaseline_toBaselineOf="@+id/beaconSettingEditBtw"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/beaconSettingTxtDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_check_rssi"
        android:drawablePadding="4dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical"
        android:text="@string/setting_rssi"
        android:textColor="@color/colorGrey"
        app:layout_constraintBaseline_toBaselineOf="@+id/beaconSettingEditDistance"
        app:layout_constraintEnd_toStartOf="@+id/beaconSettingEditDistance"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/beaconSettingEditScan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="4"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/beaconTxt1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <EditText
        android:id="@+id/beaconSettingEditBtw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/beaconTxt2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/beaconSettingEditScan" />

    <EditText
        android:id="@+id/beaconSettingEditDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number|numberSigned"
        android:maxLength="4"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/beaconTxt3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/beaconSettingEditBtw" />

    <TextView
        android:id="@+id/beaconTxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/setting_ms"
        app:layout_constraintBaseline_toBaselineOf="@+id/beaconSettingEditScan"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/beaconTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/setting_ms"
        app:layout_constraintBaseline_toBaselineOf="@+id/beaconSettingEditBtw"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/beaconTxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/setting_dbm"
        app:layout_constraintBaseline_toBaselineOf="@+id/beaconSettingEditDistance"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/beaconSettingSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_track_changes"
        android:drawablePadding="4dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/setting_open"
        android:textColor="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beaconSettingEditDistance" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.65"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beaconSettingTitle" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beaconSettingSwitch" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/setting_system"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/jura_light"
        android:onClick="goToSystemSetting"
        android:text="@string/setting_btn_system"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>